@@ -87,7 +87,7 @@ class EmptyVolumeCache:
         ]
 
     def _WalkCallback(self, arg, directory, files):
-        # callback function for os.path.walk - no need to be member, but it's
+        # callback function for os.walk - no need to be member, but it's
         # close to the callers :)
         callback, total_list = arg
         for file in files:
@@ -119,7 +119,7 @@ class EmptyVolumeCache:
         total = [0]  # See _WalkCallback above
         try:
             for d in self._GetDirectories():
-                os.path.walk(d, self._WalkCallback, (callback, total))
+                os.walk(d, self._WalkCallback, (callback, total))
                 print("After looking in", d, "we have", total[0], "bytes")
         except pythoncom.error as exc:
             # This will be raised by the callback when the user selects 'cancel'.
@@ -134,7 +134,7 @@ class EmptyVolumeCache:
         # GetSpaceUsed
         try:
             for d in self._GetDirectories():
-                os.path.walk(d, self._WalkCallback, (callback, None))
+                os.walk(d, self._WalkCallback, (callback, None))
         except pythoncom.error as exc:
             # This will be raised by the callback when the user selects 'cancel'.
             if exc.hresult != winerror.E_ABORT:
